--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
   <a href="/" class="btn">Home</a>
-  <a href="/Blogs" class="btn">Burritos of San Diego</a>
+  <a href="/blog" class="btn">Blog</a>
   <a href="/assets/misc/resume.pdf" class="btn">Resume</a>
   <a href="/dataprojects" class="btn">Data projects</a>
 
