--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 ---
 ---
+p {
+  text-align: justify;
+  text-justify: inter-word;
+}
 
 @import "{{ site.theme }}";
 @import '../_sass/variables.scss';
