--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,7 @@
 ---
 ---
-p {
-  text-align: justify;
-  text-justify: inter-word;
-}
 
 @import "{{ site.theme }}";
 @import '../_sass/variables.scss';
 @import '../_sass/custom.scss';
+@import '../_sass/_page.scss';
