--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <section class="page-header">
-  <h1 class="project-name">{{ site.title | "/Shama Barna, PhD"}}</h1>
+  <h1 class="project-name">Shama Barna, PhD</h1>
 
 
   <a href="/" class="btn">Home</a>
