--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <section class="page-header">
-  <h1 class="project-name">Shama Barna,PhD</h1>
-  <h2 class="project-tagline">{{ My personal website for data science projects}}</h2>
+  <h1 class="project-name">Shama Barna</h1>
+  <h2 class="project-tagline">Welcome to my personal website</h2>
 
 
   <a href="/" class="btn">Home</a>
