--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   <a href="/" class="btn">Home</a>
   <a href="/blog" class="btn">Blog</a>
   <a href="/assets/misc/resume.pdf" class="btn">Resume</a>
-  <a href="/dataprojects" class="btn">Data Science Projects</a>
+  <a href="/datascienceprojects" class="btn">Data Science Projects</a>
 
   {% if site.google_analytics and jekyll.environment == 'production' %}
   {% include analytics.html %}
