--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,5 +2,12 @@
 ---
 
 @import "{{ site.theme }}";
-@import '../_sass/page.scss';
+.page-header {
+  color: #ffff;
+  background-color: #A067AB;
+  background-image: linear-gradient(120deg, #5073B8, #A067AB);
+}
+.page__content {
+  text-align: justify;
+}
 
