--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1>{{ page.title }}</h1>
 <p>{{ page.date | date: '%B %d, %Y'}}</p>
-<hr>
+<hr align ="justify">
 
 {{ content }}
 
