--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1 align="center">{{ page.title }}</h1>
+<h1>{{ page.title }}</h1>
 <p>{{ page.date | date: '%B %d, %Y'}}</p>
 <hr align ="justify">
 {{ content }}
