--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 
   <a href="/" class="btn">Home</a>
   <a href="/blog" class="btn">Blog</a>
-  <!---  <a href="/assets/misc/resume.pdf" class="btn">Resume</a> ---> o
+  <!---  <a href="/assets/misc/resume.pdf" class="btn">Resume</a> --->
   <a href="/datascienceprojects" class="btn">Data Science Projects</a>
    <a href="/blog" class="btn">Contact</a>
 
