--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
   <a href="/blog" class="btn">Blog</a>
   <!---  <a href="/assets/misc/resume.pdf" class="btn">Resume</a> --->
   <a href="/datascienceprojects" class="btn">Data Science Projects</a>
-   <a href="/blog" class="btn">Contact Me</a>
+   <a href="/Contact" class="btn">Contact Me</a>
 
   {% if site.google_analytics and jekyll.environment == 'production' %}
   {% include analytics.html %}
